--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Computer Science Revision</title>
 
         <link rel="icon" type="image/png" href="./revision/icons/logo.svg"/>
-        <meta property="og:image" content="./revisin/icons/logo.png" />
+        <meta property="og:image" content="./revision/icons/logo.png" />
         <meta property="og:image:width" content="640" />
         <meta property="og:image:height" content="512" />
 
