--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:image:height" content="512" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Computer Science Revision">
+        <meta name="description" content="Computer Science Revision is an online, mobile-friendly revision guide for GCSE Computer Science students.">
     </head>
 
     <body>
@@ -21,7 +21,7 @@
         
         <p><br />Welcome to <strong>Computer Science Revision</strong> by Rujul Nayak.</p>
 
-        <p>This is an onine, mobile-friendly revision guide for GCSE Computer Science students.</p>
+        <p>This is an online, mobile-friendly revision guide for GCSE Computer Science students.</p>
 
         <p><br /><b><a href="./revision/">Click here to check it out!</a></b></p>
 
