--- a/revision/index.html
+++ b/revision/index.html
@@ -13,7 +13,7 @@
         <meta property="og:image:height" content="512" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Computer Science Revision">
+        <meta name="description" content="Computer Science Revision is an online, mobile-friendly revision guide for GCSE Computer Science students">
     </head>
 
     <body>
